src/objects/QueryLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AdEndDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__AdEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdStartDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__AdStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingPeriodEndDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__BillingPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingPeriodStartDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__BillingPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__Dimension1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__Dimension2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__Dimension3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dimension 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__Discount_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__Edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__GeneralLedgerAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__Insert_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmgi__Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__LineDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <formula>TEXT(SalesInvoiceLineItem__r.ffps_dmgi__Line_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongDescription__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__NetValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryValue__c</fullName>
        <label>Query Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <referenceTo>Query__c</referenceTo>
        <relationshipLabel>Query Line Items</relationshipLabel>
        <relationshipName>QueryLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReceivingCompany__c</fullName>
        <formula>SalesInvoiceLineItem__r.ffps_dmg__ReceivingCompany__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receiving Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Query Line Items</relationshipLabel>
        <relationshipName>QueryLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__TaxCode1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__TaxRate1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxValue__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__TaxValue1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <formula>SalesInvoiceLineItem__r.c2g__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Query Line Item</label>
    <nameField>
        <displayFormat>QLI{00000}</displayFormat>
        <label>Query Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QueryValueCannotExceedNetValue</fullName>
        <active>true</active>
        <description>The Query Value cannot exceed the Net Value of the Invoice Line Item.</description>
        <errorConditionFormula>QueryValue__c &gt;  NetValue__c</errorConditionFormula>
        <errorDisplayField>QueryValue__c</errorDisplayField>
        <errorMessage>The Query Value cannot exceed the Net Value of the Invoice Lone Item.</errorMessage>
    </validationRules>
</CustomObject>